force-app/main/default/objects/animalos__Referral__c/animalos__Referral__c.object-meta.xml
<CustomObject>
    <label>Referral</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>