force-app/main/default/objects/animalos__Referral__c/fields/animalos__Animal_Source__c.field-meta.xml
<CustomField>
    <fullName>animalos__Animal_Source__c</fullName>
    <label>Animal Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>animalos__Animal_Source</valueSetName>
    </valueSet>
</CustomField>