force-app/main/default/objects/animalos__Referral__c/fields/animalos__Created_From__c.field-meta.xml
<CustomField>
    <fullName>animalos__Created_From__c</fullName>
    <label>Created From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>