force-app/main/default/objects/animalos__Referral__c/fields/animalos__Date_Collected__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Collected__c</fullName>
    <label>Date Collected</label>
    <type>Date</type>
</CustomField>