force-app/main/default/objects/animalos__Referral__c/fields/animalos__Date_Returned__c.field-meta.xml
<CustomField>
    <fullName>animalos__Date_Returned__c</fullName>
    <label>Date Returned</label>
    <type>Date</type>
</CustomField>