force-app/main/default/objects/animalos__Referral__c/fields/animalos__Entry_Site__c.field-meta.xml
<CustomField>
    <fullName>animalos__Entry_Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entry Site</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <filterItems>
            <field>animalos__Location__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Site</value>
        </filterItems>
        <filterItems>
            <field>animalos__Location__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Offsite</value>
        </filterItems>
        <filterItems>
            <field>animalos__Location__c.animalos__Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>animalos__Location__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>