force-app/main/default/objects/animalos__Referral__c/fields/animalos__Outbound_Type__c.field-meta.xml
<CustomField>
    <fullName>animalos__Outbound_Type__c</fullName>
    <label>Outbound Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Agency Outgoing</fullName>
            </value>
            <value>
                <fullName>Council</fullName>
            </value>
            <value>
                <fullName>Emergency Boarding Returned to Owner</fullName>
            </value>
            <value>
                <fullName>Reclaimed</fullName>
            </value>
            <value>
                <fullName>Returned Protective Custody Animal</fullName>
            </value>
            <value>
                <fullName>Returned Surrender</fullName>
            </value>
            <value>
                <fullName>Returned to Habitat</fullName>
            </value>
            <value>
                <fullName>Transfer Out to Council</fullName>
            </value>
            <value>
                <fullName>Transfer Out - To Rescue</fullName>
            </value>
            <value>
                <fullName>Transfer Out - Wildlife Carer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>