force-app/main/default/objects/animalos__Referral__c/fields/animalos__Referral_Description__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referral_Description__c</fullName>
    <label>Referral Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>