force-app/main/default/objects/animalos__Referral__c/fields/animalos__Referral_Organisation__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referral_Organisation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Referrals (Referral Organisation)</relationshipLabel>
    <relationshipName>Referrals_Referral_Organisation</relationshipName>
    <type>Lookup</type>
</CustomField>