force-app/main/default/objects/animalos__Referral__c/fields/animalos__Referral_Organisation_Contact__c.field-meta.xml
<CustomField>
    <fullName>animalos__Referral_Organisation_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral Organisation Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Referral Organisation Contact)</relationshipLabel>
    <relationshipName>Referrals_Referral_Organisation_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>