force-app/main/default/objects/animalos__Referral__c/fields/animalos__Result__c.field-meta.xml
<CustomField>
    <fullName>animalos__Result__c</fullName>
    <label>Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>