force-app/main/default/objects/animalos__Referral__c/fields/animalos__Return_Reason__c.field-meta.xml
<CustomField>
    <fullName>animalos__Return_Reason__c</fullName>
    <label>Return Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Behaviour - Aggressive To Dogs</fullName>
            </value>
            <value>
                <fullName>Behaviour - Aggressive To Other Animals</fullName>
            </value>
            <value>
                <fullName>Behaviour - Aggressive To People</fullName>
            </value>
            <value>
                <fullName>Behaviour - Animal Is Anxious</fullName>
            </value>
            <value>
                <fullName>Behaviour - Arousal/Too Active</fullName>
            </value>
            <value>
                <fullName>Behaviour - Destructive Behaviour</fullName>
            </value>
            <value>
                <fullName>Behaviour - Digging</fullName>
            </value>
            <value>
                <fullName>Behaviour - Escape Behaviour</fullName>
            </value>
            <value>
                <fullName>Behaviour - Escapes</fullName>
            </value>
            <value>
                <fullName>Behaviour - Fearful of Loud Noises</fullName>
            </value>
            <value>
                <fullName>Behaviour - High Prey Drive</fullName>
            </value>
            <value>
                <fullName>Behaviour - Not Good with Kids</fullName>
            </value>
            <value>
                <fullName>Behaviour - Not Good With Other Animals(not aggro)</fullName>
            </value>
            <value>
                <fullName>Behaviour - Not housebroken/Not using litter box</fullName>
            </value>
            <value>
                <fullName>Behaviour - Obsessive Behaviour</fullName>
            </value>
            <value>
                <fullName>Behaviour - Spraying</fullName>
            </value>
            <value>
                <fullName>Behaviour - Timid/Fearful</fullName>
            </value>
            <value>
                <fullName>Behaviour - Too Active</fullName>
            </value>
            <value>
                <fullName>Behaviour - Too Noisy</fullName>
            </value>
            <value>
                <fullName>CANCELLED ADOPTION - at time of adoption</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Allergies</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Blind</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Cancer</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Cannot afford vet bill</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Deaf</fullName>
            </value>
            <value>
                <fullName>Health of the animal - FELV/FIV Positive</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Hairloss</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Kennel Cough</fullName>
            </value>
            <value>
                <fullName>Health of the animal - Parvo</fullName>
            </value>
            <value>
                <fullName>Health of the animal - URI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>