force-app/main/default/objects/animalos__Referral__c/fields/animalos__Scheduled_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>animalos__Scheduled_Date_Time__c</fullName>
    <label>Scheduled Date/Time</label>
    <type>DateTime</type>
</CustomField>