force-app/main/default/objects/animalos__Referral__c/fields/aos_Abuse_Description__c.field-meta.xml
<CustomField>
    <fullName>aos_Abuse_Description__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Abuse Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>