force-app/main/default/objects/animalos__Referral__c/fields/aos_Additional_Signature_URL__c.field-meta.xml
<CustomField>
    <fullName>aos_Additional_Signature_URL__c</fullName>
    <label>Additional Signature URL</label>
    <type>Url</type>
</CustomField>