force-app/main/default/objects/animalos__Referral__c/fields/aos_Additional_Signing_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Additional_Signing_Date__c</fullName>
    <label>Additional Signing Date</label>
    <type>Date</type>
</CustomField>