force-app/main/default/objects/animalos__Referral__c/fields/aos_Address__c.field-meta.xml
<CustomField>
    <fullName>aos_Address__c</fullName>
    <formula>animalos__Contact__r.Full_Address__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Address</label>
    <type>Text</type>
</CustomField>