force-app/main/default/objects/animalos__Referral__c/fields/aos_Adoption_Amount__c.field-meta.xml
<CustomField>
    <fullName>aos_Adoption_Amount__c</fullName>
    <label>Adoption Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>