force-app/main/default/objects/animalos__Referral__c/fields/aos_Alternate_Contact__c.field-meta.xml
<CustomField>
    <fullName>aos_Alternate_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Alternate Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Alternate Contact)</relationshipLabel>
    <relationshipName>Alternate_Contact_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>