force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>animalos__Animal__c</referenceTo>
    <relationshipLabel>Referrals</relationshipLabel>
    <relationshipName>aos_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>