force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_Bitten_or_Scratched_Someone__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Bitten_or_Scratched_Someone__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Bitten or Scratched Someone</label>
    <type>Checkbox</type>
</CustomField>