force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_Fed__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Fed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Fed</label>
    <type>Checkbox</type>
</CustomField>