force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_Fed_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Fed_Details__c</fullName>
    <label>Animal Fed Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>