force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_History_Special_Requests__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_History_Special_Requests__c</fullName>
    <label>Animal History/Special Requests</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>