force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_ID__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_ID__c</fullName>
    <formula>aos_Animal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Animal ID</label>
    <type>Text</type>
</CustomField>