force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_Medicated__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Medicated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Animal Medicated</label>
    <type>Checkbox</type>
</CustomField>