force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_Owner__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal Owner</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Referrals (Animal Owner)</relationshipLabel>
    <relationshipName>aos_Animal_Owner_Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>