force-app/main/default/objects/animalos__Referral__c/fields/aos_Animal_Situation_Other__c.field-meta.xml
<CustomField>
    <fullName>aos_Animal_Situation_Other__c</fullName>
    <label>Animal Situation Other</label>
    <length>255</length>
    <type>Text</type>
</CustomField>