force-app/main/default/objects/animalos__Referral__c/fields/aos_Available_to_be_Contacted__c.field-meta.xml
<CustomField>
    <fullName>aos_Available_to_be_Contacted__c</fullName>
    <label>Available to be Contacted</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>