force-app/main/default/objects/animalos__Referral__c/fields/aos_Bitten_or_Scratched_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Bitten_or_Scratched_Details__c</fullName>
    <label>Bitten or Scratched Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>