force-app/main/default/objects/animalos__Referral__c/fields/aos_Boarding_Premises__c.field-meta.xml
<CustomField>
    <fullName>aos_Boarding_Premises__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Boarding Premises</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Shelter</fullName>
            </value>
            <value>
                <fullName>Offsite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>