force-app/main/default/objects/animalos__Referral__c/fields/aos_Cause_of_Affliction__c.field-meta.xml
<CustomField>
    <fullName>aos_Cause_of_Affliction__c</fullName>
    <label>Cause of Affliction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Abandoned/Orphaned</fullName>
            </value>
            <value>
                <fullName>Attacked by cat</fullName>
            </value>
            <value>
                <fullName>Attacked by dog</fullName>
            </value>
            <value>
                <fullName>Attacked by Livestock</fullName>
            </value>
            <value>
                <fullName>Attacked by other</fullName>
            </value>
            <value>
                <fullName>Barbed Wire</fullName>
            </value>
            <value>
                <fullName>Beak And Feather</fullName>
            </value>
            <value>
                <fullName>Bush Fire</fullName>
            </value>
            <value>
                <fullName>Chemicals</fullName>
            </value>
            <value>
                <fullName>Cocus Palm</fullName>
            </value>
            <value>
                <fullName>Collision with other object</fullName>
            </value>
            <value>
                <fullName>Collision with vehicle</fullName>
            </value>
            <value>
                <fullName>Disease</fullName>
            </value>
            <value>
                <fullName>Domestic/Captivity issue</fullName>
            </value>
            <value>
                <fullName>Electrocution</fullName>
            </value>
            <value>
                <fullName>Entangled/Trapped</fullName>
            </value>
            <value>
                <fullName>Entanglement</fullName>
            </value>
            <value>
                <fullName>Entrapment</fullName>
            </value>
            <value>
                <fullName>Fall</fullName>
            </value>
            <value>
                <fullName>Feral</fullName>
            </value>
            <value>
                <fullName>Gardening Equipment</fullName>
            </value>
            <value>
                <fullName>Gun Shot</fullName>
            </value>
            <value>
                <fullName>Hit By Car</fullName>
            </value>
            <value>
                <fullName>Human</fullName>
            </value>
            <value>
                <fullName>Imminent Risk</fullName>
            </value>
            <value>
                <fullName>Ingestion Foreign Bodies</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
            <value>
                <fullName>Natural Disaster</fullName>
            </value>
            <value>
                <fullName>No Parents</fullName>
            </value>
            <value>
                <fullName>Nuisance</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>