force-app/main/default/objects/animalos__Referral__c/fields/aos_Comments__c.field-meta.xml
<CustomField>
    <fullName>aos_Comments__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <inlineHelpText>Comments field for contact details of council staff member</inlineHelpText>
    <label>Comments</label>
    <type>TextArea</type>
</CustomField>