force-app/main/default/objects/animalos__Referral__c/fields/aos_Contact_Breeder_ID_BIN__c.field-meta.xml
<CustomField>
    <fullName>aos_Contact_Breeder_ID_BIN__c</fullName>
    <formula>animalos__Contact__r.Contact_Breeder_ID_BIN__c</formula>
    <label>Contact Breeder ID (BIN))</label>
    <type>Text</type>
</CustomField>