force-app/main/default/objects/animalos__Referral__c/fields/aos_Contact_Code__c.field-meta.xml
<CustomField>
    <fullName>aos_Contact_Code__c</fullName>
    <formula>animalos__Contact__r.Contact_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Code</label>
    <type>Text</type>
</CustomField>