force-app/main/default/objects/animalos__Referral__c/fields/aos_Contact_LGA__c.field-meta.xml
<CustomField>
    <fullName>aos_Contact_LGA__c</fullName>
    <formula>animalos__Contact__r.LGA__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact LGA</label>
    <type>Text</type>
</CustomField>