force-app/main/default/objects/animalos__Referral__c/fields/aos_Council_Advised_It_Will_Take_The__c.field-meta.xml
<CustomField>
    <fullName>aos_Council_Advised_It_Will_Take_The__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Will The Council Take The Animal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>