force-app/main/default/objects/animalos__Referral__c/fields/aos_Council_Area__c.field-meta.xml
<CustomField>
    <fullName>aos_Council_Area__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <formula>aos_Postcode_Suburb__r.aos_LGA__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Council Area</label>
    <type>Text</type>
</CustomField>