force-app/main/default/objects/animalos__Referral__c/fields/aos_Council_Pound_Contacted__c.field-meta.xml
<CustomField>
    <fullName>aos_Council_Pound_Contacted__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which council pound was contacted</inlineHelpText>
    <label>Council Pound Contacted</label>
    <referenceTo>aos_LGA__c</referenceTo>
    <relationshipLabel>Referrals (Council Pound Contacted)</relationshipLabel>
    <relationshipName>Referrals1</relationshipName>
    <type>Lookup</type>
</CustomField>