force-app/main/default/objects/animalos__Referral__c/fields/aos_Current_Daytime_Arrangements__c.field-meta.xml
<CustomField>
    <fullName>aos_Current_Daytime_Arrangements__c</fullName>
    <label>Current Daytime Arrangements</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>