force-app/main/default/objects/animalos__Referral__c/fields/aos_Date_Council_Pound_Contacted__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_Council_Pound_Contacted__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Date Council Pound Contacted</label>
    <type>Date</type>
</CustomField>