force-app/main/default/objects/animalos__Referral__c/fields/aos_Date_Found__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_Found__c</fullName>
    <inlineHelpText>This field notes when an Animal has been reported as Found</inlineHelpText>
    <label>Date Found</label>
    <type>Date</type>
</CustomField>