force-app/main/default/objects/animalos__Referral__c/fields/aos_Date_Lost__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_Lost__c</fullName>
    <inlineHelpText>This fields notes when this Animal was reported as lost. This can be used to cross reference other fields such as &apos;Reported Found&apos; or &apos;Current Site&apos;.</inlineHelpText>
    <label>Date Lost</label>
    <type>Date</type>
</CustomField>