force-app/main/default/objects/animalos__Referral__c/fields/aos_Date_of_Adoption__c.field-meta.xml
<CustomField>
    <fullName>aos_Date_of_Adoption__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Date of Adoption</label>
    <type>Date</type>
</CustomField>