force-app/main/default/objects/animalos__Referral__c/fields/aos_Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>aos_Declined_Reason__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Adopted Other Animal</fullName>
            </value>
            <value>
                <fullName>Change of Circumstance</fullName>
            </value>
            <value>
                <fullName>Financial Reasons</fullName>
            </value>
            <value>
                <fullName>Lost Interest</fullName>
            </value>
            <value>
                <fullName>Trial Didn&apos;t Workout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>