force-app/main/default/objects/animalos__Referral__c/fields/aos_Declined_Reason_Description__c.field-meta.xml
<CustomField>
    <fullName>aos_Declined_Reason_Description__c</fullName>
    <label>Declined Reason Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>