force-app/main/default/objects/animalos__Referral__c/fields/aos_Do_You_Have_Children__c.field-meta.xml
<CustomField>
    <fullName>aos_Do_You_Have_Children__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Do You Have Children</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>