force-app/main/default/objects/animalos__Referral__c/fields/aos_Email__c.field-meta.xml
<CustomField>
    <fullName>aos_Email__c</fullName>
    <formula>animalos__Contact__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email</label>
    <type>Text</type>
</CustomField>