force-app/main/default/objects/animalos__Referral__c/fields/aos_Exact_Pickup_Location__c.field-meta.xml
<CustomField>
    <fullName>aos_Exact_Pickup_Location__c</fullName>
    <label>Exact Pickup Location</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>