force-app/main/default/objects/animalos__Referral__c/fields/aos_Facilities_Available__c.field-meta.xml
<CustomField>
    <fullName>aos_Facilities_Available__c</fullName>
    <inlineHelpText>Is there suitable facilities at the adopters address for the animal? i.e. Suitable accommodation, exercise areas, suitable surroundings.</inlineHelpText>
    <label>Facilities Available</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>