force-app/main/default/objects/animalos__Referral__c/fields/aos_Fencing_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_Fencing_Type__c</fullName>
    <label>Fencing Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>