force-app/main/default/objects/animalos__Referral__c/fields/aos_Financial_Agreement_Date__c.field-meta.xml
<CustomField>
    <fullName>aos_Financial_Agreement_Date__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Financial Agreement Date</label>
    <type>Date</type>
</CustomField>