force-app/main/default/objects/animalos__Referral__c/fields/aos_Financial_Agreement_Details__c.field-meta.xml
<CustomField>
    <fullName>aos_Financial_Agreement_Details__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>Financial Agreement Details</label>
    <type>TextArea</type>
</CustomField>