force-app/main/default/objects/animalos__Referral__c/fields/aos_Financial_Year__c.field-meta.xml
<CustomField>
    <fullName>aos_Financial_Year__c</fullName>
    <formula>IF(
    MONTH(DATEVALUE(animalos__Scheduled_Date_Time__c)) &gt;= 7, 
    TEXT(YEAR(DATEVALUE(animalos__Scheduled_Date_Time__c)) + 1), 
    TEXT(YEAR(DATEVALUE(animalos__Scheduled_Date_Time__c)))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Financial Year</label>
    <type>Text</type>
</CustomField>