force-app/main/default/objects/animalos__Referral__c/fields/aos_Geolocation__c.field-meta.xml
<CustomField>
    <fullName>aos_Geolocation__c</fullName>
    <label>Geolocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>