force-app/main/default/objects/animalos__Referral__c/fields/aos_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>aos_Home_Phone__c</fullName>
    <formula>animalos__Contact__r.HomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Phone</label>
    <type>Text</type>
</CustomField>