force-app/main/default/objects/animalos__Referral__c/fields/aos_House_Type__c.field-meta.xml
<CustomField>
    <fullName>aos_House_Type__c</fullName>
    <label>House Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unit</fullName>
            </value>
            <value>
                <fullName>Townhouse</fullName>
            </value>
            <value>
                <fullName>Home with yard</fullName>
            </value>
            <value>
                <fullName>Home with acreage</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>