force-app/main/default/objects/animalos__Referral__c/fields/aos_How_Many_Children_and_Age_s__c.field-meta.xml
<CustomField>
    <fullName>aos_How_Many_Children_and_Age_s__c</fullName>
    <complianceGroup>Not Categorized</complianceGroup>
    <label>How Many Children and Age(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>